--- a/Projects/portfolio/src/components/Intro/intro.css
+++ b/Projects/portfolio/src/components/Intro/intro.css
@@ -41,12 +41,21 @@
   margin: 1rem 0;
   padding: 0.75rem 1.5rem;
   border: none;
-  border-radius: 2rem;
+  border-radius: 5rem;
 }
 .btnImg {
   object-fit: cover;
   margin: 0 0.24rem;
   height: 1rem;
+}
+.link {
+  background: black;
+  object-fit: cover;
+  height: 3rem;
+  width: 3rem;
+  margin: 0 0.75rem;
+  border: none;
+  border-radius: 5rem;
 }
 @media screen and (max-width: 840px) {
   .bg {
