--- a/Projects/portfolio/src/components/Works/works.css
+++ b/Projects/portfolio/src/components/Works/works.css
@@ -134,7 +134,7 @@ body {
   box-sizing: border-box;
 }
 .container .box .content h2 {
-  color: yellowgreen;
+  color: black !important;
   transition: 0.5s;
   text-transform: uppercase;
   margin-bottom: 5px;
@@ -146,7 +146,7 @@ body {
   transform: translateY(0px);
 }
 .container .box .content p {
-  color: yellowgreen;
+  color: black;
   transition: 0.5s;
   font-size: 14px;
   transform: translateY(200px);
