--- a/Projects/Url_shortner_node/views/home.ejs
+++ b/Projects/Url_shortner_node/views/home.ejs
@@ -23,7 +23,6 @@
       </form>
     </div>
     <div>
-      <% if(locals.urls) {%>
       <table>
         <thead>
           <th>S.No:</th>
@@ -32,7 +31,7 @@
           <th>Clicks</th>
         </thead>
         <tbody>
-          <% urls.forEach((url,index) =>{%>
+          <% if(locals.urls) {%> <% urls.forEach((url,index) =>{%>
           <tr>
             <td><%= index+1%></td>
             <td><%= url.shortId%></td>
@@ -40,9 +39,10 @@
             <td><%=url.visitHistory.length%></td>
             <%}) %>
           </tr>
+
+          <%}%>
         </tbody>
       </table>
-      <%}%>
     </div>
   </body>
 </html>
